--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,25 @@
+.classpath
+.project
+.idea/
+.idea/*
+.settings/
+out
+redis_db.rdb
+TweetSent/data/temp
+TweetSent/data/temp/*
+tmp/*
+**/tmp/*
+out/*
+log
+log.*
+**/target/*
+**/classes/
+**/log.txt
 *.class
-
-# Package Files #
-*.jar
-*.war
-*.ear
+*~
+*.lock
+*.DS_Store
+*.swp
+*.out
+*.iml
+/bin
