--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,15 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12-beta-1</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
 
@@ -43,12 +49,6 @@
             <groupId>org.apache.opennlp</groupId>
             <artifactId>opennlp-maxent</artifactId>
             <version>3.0.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>18.0-rc1</version>
         </dependency>
 
         <dependency>
