rectify one spelling mistake in pom

--- a/NLPDataStructure/pom.xml
+++ b/NLPDataStructure/pom.xml
@@ -11,7 +11,7 @@
     <licenses>
         <license>
             <name>GPL, Version 3.0</name>
-            <url>http://www.gnu.org/licenses/gpl-3.0.txtl</url>
+            <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
