--- a/pom.xml
+++ b/pom.xml
@@ -70,5 +70,10 @@
             <version>3.0.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.maochen.nlp</groupId>
+            <artifactId>nlp</artifactId>
+            <version>1.0.1</version>
+        </dependency>
     </dependencies>
 </project>
