--- a/CoreNLP-NLP/pom.xml
+++ b/CoreNLP-NLP/pom.xml
@@ -10,8 +10,8 @@
     <url>${project.parent.url}</url>
 
     <parent>
-        <groupId>org.maochen.nlp.maochen.nlp</groupId>
-        <artifactId>CoreNLP</artifactId>
+        <groupId>org.maochen.nlp</groupId>
+        <artifactId>NLP</artifactId>
         <version>1.0.3</version>
     </parent>
 
@@ -121,7 +121,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.maochen.nlp.maochen.nlp</groupId>
+            <groupId>org.maochen.nlp</groupId>
             <artifactId>CoreNLP-DataStructure</artifactId>
             <version>${project.version}</version>
         </dependency>
