--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.maochen.nlp.maochen.nlp</groupId>
-    <artifactId>CoreNLP</artifactId>
+    <groupId>org.maochen.nlp</groupId>
+    <artifactId>NLP</artifactId>
     <packaging>pom</packaging>
     <version>1.0.3</version>
     <name>${project.groupId}:${project.artifactId}</name>
