--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.maochen.nlp</groupId>
     <artifactId>NLP</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.4</version>
+    <version>1.0.5</version>
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Maochen.org Natural Lang Processing Suite</description>
     <url>http://maven.apache.org</url>
@@ -50,7 +50,7 @@
     <modules>
         <module>CoreNLP-DataStructure</module>
         <module>CoreNLP-NLP</module>
-        <module>CoreNLP-Experimental</module>
+        <!--<module>CoreNLP-Experimental</module>-->
     </modules>
 
     <build>
