--- a/CoreNLP-Experimental/pom.xml
+++ b/CoreNLP-Experimental/pom.xml
@@ -126,7 +126,7 @@
         <dependency>
             <groupId>org.maochen.nlp</groupId>
             <artifactId>CoreNLP-NLP</artifactId>
-            <version>${project.parent.version}</version>
+            <version>1.0.6.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.opennlp</groupId>
