--- a/CoreNLP-Experiment/pom.xml
+++ b/CoreNLP-Experiment/pom.xml
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.maochen.nlp</groupId>
-    <artifactId>NLP</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0.7</version>
+    <artifactId>CoreNLP-Experiment</artifactId>
+    <packaging>jar</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
-    <description>Maochen.org Natural Lang Processing Suite</description>
-    <url>http://maven.apache.org</url>
+    <description>Experiment, Dont use directly</description>
+    <url>${project.parent.url}</url>
+
+    <parent>
+        <groupId>org.maochen.nlp</groupId>
+        <artifactId>NLP</artifactId>
+        <version>1.0.7</version>
+    </parent>
 
     <licenses>
         <license>
@@ -46,12 +50,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <modules>
-        <module>CoreNLP-DataStructure</module>
-        <module>CoreNLP-NLP</module>
-        <!--<module>CoreNLP-Experiment</module>-->
-    </modules>
 
     <build>
         <plugins>
@@ -122,9 +120,26 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.4</version>
+            <groupId>org.maochen.nlp</groupId>
+            <artifactId>CoreNLP-DataStructure</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.maochen.nlp</groupId>
+            <artifactId>CoreNLP-NLP</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.opennlp</groupId>
+            <artifactId>opennlp-maxent</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
