--- a/CoreNLP-NLP/pom.xml
+++ b/CoreNLP-NLP/pom.xml
@@ -8,7 +8,6 @@
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Natural Language Tools</description>
     <url>${project.parent.url}</url>
-    <version>1.0.10-RC2</version>
 
     <parent>
         <groupId>org.maochen.nlp</groupId>
@@ -162,6 +161,7 @@
             <artifactId>stanford-corenlp</artifactId>
             <version>3.5.2</version>
             <classifier>models</classifier>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
