--- a/CoreNLP-NLP/pom.xml
+++ b/CoreNLP-NLP/pom.xml
@@ -8,6 +8,7 @@
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Natural Language Tools</description>
     <url>${project.parent.url}</url>
+    <version>1.0.12-RC2</version>
 
     <parent>
         <groupId>org.maochen.nlp</groupId>
