--- a/CoreNLP-NLP/pom.xml
+++ b/CoreNLP-NLP/pom.xml
@@ -136,7 +136,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>19.0-rc1</version>
+            <version>19.0.20150826</version>
         </dependency>
 
         <dependency>
