--- a/CoreNLP-DataStructure/pom.xml
+++ b/CoreNLP-DataStructure/pom.xml
@@ -6,6 +6,7 @@
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Data Structure for CoNLL-X Dependency Tree</description>
     <url>${project.parent.url}</url>
+    <version>1.0.12-RC1</version>
 
     <parent>
         <groupId>org.maochen.nlp</groupId>
