Add in CRFs classifier and optimize sentence type feats. WIP. didn't bump up the version.

--- a/CoreNLP-NLP/pom.xml
+++ b/CoreNLP-NLP/pom.xml
@@ -152,6 +152,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.github.vinhkhuc</groupId>
+            <artifactId>jcrfsuite</artifactId>
+            <version>0.6</version>
+        </dependency>
+
+        <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-corenlp</artifactId>
             <version>3.5.2</version>
