add parse tree ui

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         <module>CoreNLP-DataStructure</module>
         <module>CoreNLP-NLP</module>
         <!--<module>CoreNLP-Experiment</module>-->
+        <module>CoreNLP-UI</module>
     </modules>
 
     <build>
