--- a/CoreNLP-WEB/src/main/resources/application.properties
+++ b/CoreNLP-WEB/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # This is a sample properties file for external override to use.
 # By default, not needed if mongodb instance runs on the same server.
 spring.data.h2.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
-# jdbc:h2:~/Desktop/testdb;DB_CLOSE_DELAY=-1
+#spring.data.h2.url=jdbc:h2:~/Desktop/testdb;DB_CLOSE_DELAY=-1
 spring.data.h2.username=sa
 spring.data.h2.password=sa
