--- a/CoreNLP-WEB/pom.xml
+++ b/CoreNLP-WEB/pom.xml
@@ -11,13 +11,13 @@
   <parent>
     <groupId>org.maochen.nlp</groupId>
     <artifactId>NLP</artifactId>
-    <version>1.0.19</version>
+    <version>1.1</version>
   </parent>
 
   <licenses>
     <license>
-      <name>The Apache License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <name>GPL, Version 3.0</name>
+      <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
     </license>
   </licenses>
 
