--- a/CoreNLP-NLP/pom.xml
+++ b/CoreNLP-NLP/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.maochen.nlp</groupId>
     <artifactId>NLP</artifactId>
-    <version>1.1</version>
+    <version>1.2</version>
   </parent>
 
   <licenses>
@@ -129,13 +129,13 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <version>1.8.0-alpha2</version>
+      <version>1.8.0-beta0</version>
     </dependency>
 
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>22.0-android</version>
+      <version>23.4-jre</version>
     </dependency>
 
     <dependency>
@@ -153,13 +153,13 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.5</version>
+      <version>2.6</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-csv</artifactId>
-      <version>1.4</version>
+      <version>1.5</version>
     </dependency>
 
     <dependency>
